--- a/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/index.html
@@ -52,14 +52,19 @@
 
     <!-- Page Content -->
     <div class="container">
-      <form>
-        Your Email:<br>
-        <input type="email" name="email"><br>
-        Your password:<br>
-        <input type="password" name="password"><br>
-        <br><br>
-        <input type="submit" class="btn btn-primary" value="Submit"></input>
-      </form>
+
+        <!-- Log in -->
+      <form class="form-inline form-control">
+
+          <span class="col-md-2">Your Email:</span>
+
+        <input class="col-md-3" type="email" name="email">
+           <span class="col-md-2">Your password:</span>
+
+        <input class="col-md-3" type="password" name="password">
+          <span class="col-md-1">&nbsp;</span>
+        <input class="col-md-1" type="submit" class="btn btn-primary" value="Submit"></input>
+        </form>
 
       <div class="row">
 
